etc/tests/fuzz/errors/type/member-property-return-mismatch.nshape
shape type-member-property-return-mismatch {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "variable declaration: expected str, got int"
  source ny <<'NY'
use std.core

impl PropBox {
   fn value(self box) int {
      7
   }
}

def PropBox box = PropBox({})
def str s = box.value
print(s)
NY
}
